Add support for conditional insertion of spindle enable:speed

--- a/jscut.html
+++ b/jscut.html
@@ -541,6 +541,9 @@ along with jscut.  If not, see <http://www.gnu.org/licenses/>.
                                         <td><label for="gcodeReturn00">Return to 0,0 at end</label>
                                         <td><input id="gcodeReturn00" type="checkbox" data-bind="checked: returnTo00" />
                                     <tr>
+                                        <td><label for="gcodeSpindleControl">Insert spindle control</label>
+                                        <td><input id="gcodeSpindleControl" type="number" data-bind="value: spindleControl" />
+                                    <tr>
                                         <td><label for="gcodeOffsetX">X Offset</label>
                                         <td><span data-bind="text: units" />
                                         <td><input type="number" step="any" id="gcodeOffsetX" data-bind="value: offsetX">
